week 10 - jul 13 - 19/errorJuly21

In [141]: galIDs[1190700:1190749]
Out[141]: 
array([6406616760539463890, 6406616760539463987, 6406616760539464105,
       6406616760539464105, 6406616760539464105, 6406616760539464105,
       6406616760539464170, 6406616760539464170, 6406616760539464170,
       6406616760539464170, 6406616760539480416, 6406616760539517667,
       6406616760539517667, 6406616760539517667, 6406616760539517667,
       6406616760539517722, 6406616760539517722, 6406616760539517722,
       6406616760539517803, 6406616760539517803, 6406616760539517803,
       6406616760539517803, 6406616760539517955, 6406616760539517955,
       6406616760539517955, 6406616760539517955, 6406616760539517955,
       6406616760539566873, 6406616760540470172, 6406616760540470172,
       6406616760540470172, 6406616760540470172, 6406616760540474428,
       6406616760540474428, 6406616760540493426, 6406616760540493426,
       6406616760540493426, 6406616760540493426, 6406616760540512346,
       6406616760540512346, 6406616760540847560, 6406616760540847560,
       6406616760540847560, 6406616760540990529, 6406616760541770530,
       6406616760541770530, 6406616760541770530, 6406616760541770530,
       6406616760543038193])

In [142]: uniqueGalIDinRadius
Out[142]: 
array([  6.10010810e+18,   6.10010810e+18,   6.10010810e+18,
         6.10010810e+18,   6.10010810e+18,   6.10010810e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.08207611e+18,   6.08207611e+18,
         6.08207611e+18,   6.08207611e+18,   6.08207611e+18,
         6.08207611e+18,   6.08207611e+18,   6.08207611e+18,
         6.08207611e+18,   6.08207611e+18,   6.08207611e+18,
         6.08207611e+18,   6.08207611e+18,   6.08207611e+18,
         6.08207611e+18,   6.08207611e+18,   6.08207611e+18,
         6.08207611e+18,   6.08207611e+18,   6.10010810e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.08207611e+18,   6.08207611e+18,   6.08207611e+18,
         6.08207611e+18,   6.08207611e+18,   6.08207611e+18,
         6.08207611e+18,   6.08207611e+18,   6.08207611e+18,
         6.08207611e+18,   6.08207611e+18,   6.08207611e+18,
         6.08207611e+18,   6.08207611e+18,   6.08207611e+18,
         6.08205852e+18,   6.08205852e+18,   6.10010810e+18,
         6.10010810e+18,   6.10010810e+18,   6.10010810e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.08207611e+18,   6.08207611e+18,
         6.08207611e+18,   6.08207611e+18,   6.08207611e+18,
         6.08207611e+18,   6.08207611e+18,   6.08207611e+18,
         6.08207611e+18,   6.08207611e+18,   6.08207611e+18,
         6.08207611e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.08205852e+18,
         6.08205852e+18,   6.08205852e+18,   6.08205852e+18,
         6.08205852e+18,   6.08205852e+18,   6.08205852e+18,
         6.08205852e+18])

In [143]: indexInRadius  = np.in1d(galIDs,uniqueGalIDinRadius)

In [144]: len(galIDs)
Out[144]: 1190749

In [145]: len(uniqueGalIDinRadius)
Out[145]: 178

In [146]: len(inde)
index          indexInRadius  

In [146]: len(indexInRadius)
Out[146]: 1190749

In [147]: raGalInRadius  = raGal[indexInRadius]

In [148]: len(raGalInRadius)
Out[148]: 1023175

In [149]: len(raGal\)
  File "<ipython-input-149-0c50bb3cccf4>", line 1
    len(raGal\)
               ^
SyntaxError: unexpected character after line continuation character


In [150]: len(raGal)
Out[150]: 1190749

In [151]: param = packParameterList[56]



------------------------------------------------------------------


uniqueGalIDinRadius[3]
Out[152]: 6.1001081030887782e+18

In [153]: k = np.in1d(galIDs, uniqueGalIDinRadius[3])

In [154]: k
Out[154]: array([False, False, False, ..., False, False, False], dtype=bool)

In [155]: len(galIDs[k])
Out[155]: 39

In [156]: 



--------------------------------------------------------------------------




In [49]: uniqueGalIDinRadius
Out[49]: 
array([6388602362029713445, 6388602362029713466, 6388602362029713470,
       6388602362029713981, 6388602362029736845, 6388602362029982369,
       6388602362029982522, 6388602362029982586, 6388602362029982616,
       6388602362029982744, 6388602362030085182, 6388602362031297899,
       6370587963520231015, 6370587963520231332, 6370587963520231364,
       6370587963520231393, 6370587963520231422, 6370587963520231474,
       6370587963520231537, 6370587963520231560, 6370587963520231793,
       6370587963520231810, 6370587963520254853, 6370587963520254920,
       6370587963520254925, 6370587963520500628, 6370587963520516806,
       6370587963521547018, 6370587963523364757, 6370587963520231362,
       6370587963520232083, 6370587963520254903, 6370587963520500331,
       6370587963520500539, 6388602362029709352, 6388602362029709754,
       6388602362029714038, 6388602362029735046, 6388602362029982158,
       6388602362030035697, 6388602362030986576, 6388602362031029024,
       6388602362029709146, 6388602362029713123, 6388602362029713138,
       6388602362029714063, 6388602362029737067, 6388602362029981778,
       6388602362029981880, 6388602362029981887, 6388602362029981896,
       6388602362029981937, 6388602362030035849, 6388602362030085001,
       6388602362031322465, 6388602362033014790, 6370587963520228035,
       6370587963520231192, 6370587963520231463, 6370587963520231614,
       6370587963520231775, 6370587963520231780, 6370587963520231847,
       6370587963520255198, 6370587963520499831, 6370587963520499867,
       6370587963520499892, 6370587963520499984, 6370587963520516361,
       6370587963520553706, 6370587963520553774, 6370587963520554076,
       6370587963520570073, 6370587963521504547, 6370587963522571304,
       6370570371334210484, 6370570371334455459, 6370570371334455616,
       6370587963520231157, 6370587963520231857, 6370587963520500426,
       6370587963520500842, 6388602362029709350, 6388602362029709399,
       6388602362029709415, 6388602362029709716, 6388602362029710023,
       6388602362029982037, 6388602362029982114, 6388602362030052020,
       6388602362030052056, 6388602362031322497, 6388602362029709351,
       6388602362029709500, 6388602362029709710, 6388602362029709935,
       6388602362029709964, 6388602362029710001, 6388602362029734864,
       6388602362029981912, 6388602362029982060, 6388602362031004602,
       6370570371334183112, 6370570371334208486, 6370570371334455504,
       6370570371334455745, 6370570371335089420, 6370570371335460141,
       6370570371335460186, 6388602362029736956, 6388602362029982770,
       6388602362030052380, 6388602362030986649, 6388602362030986702,
       6370587963520231387, 6370587963520231467, 6370587963520231489,
       6370587963520231541, 6370587963520231573, 6370587963520231657,
       6370587963520231924, 6370587963520231927, 6370587963520231993,
       6370587963520500524, 6370587963520500531, 6370587963521504565,
       6370587963521546911, 6370587963520231272, 6370587963520231350,
       6370587963520231392, 6370587963520231791, 6370587963520231801,
       6370587963520500620, 6370587963521201208], dtype=uint64)

In [50]: indexInRadius  = np.in1d(galIDs,uniqueGalIDinRadius)

In [51]: galIDs[indexInRadius]
Out[51]: 
array([5289671276393206916, 5289671276393206916, 5289671276393206916, ...,
       6406616760539517803, 6406616760539517803, 6406616760539517803])

In [52]: len(galIDs[indexInRadius])
Out[52]: 1023169

